--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
 
             <nav class="header-nav">
-                <a class="header-link link" href="index.html">Студия</a>
+                <a class="header-link link current" href="index.html">Студия</a>
                 <a class="header-link link" href="portfolio.html" rel="noopener noreferrer">Портфолио</a>
                 <a class="header-link link" href="">Контакты</a>
             </nav>
