--- a/portfolio.html
+++ b/portfolio.html
@@ -49,47 +49,47 @@
         
             
             <ul>
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img.jpg" alt="Экран монитора" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img.jpg" alt="Экран монитора" width="370">
                 <h3 class="main-portfolio-titel">Технокряк</h3>
                 <p class="main-portfolio-text">Веб-сайт</p></a>
                 </li>
 
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img1.jpg" alt="Баскетболисты" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img1.jpg" alt="Баскетболисты" width="370">
                 <h3 class="main-portfolio-titel">Постер New Orlean vs Golden Star</h3>
                 <p class="main-portfolio-text">Дизайн</p></a>
                 </li>
 
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img2.jpg" alt="Логотип ресторана" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img2.jpg" alt="Логотип ресторана" width="370">
                 <h3 class="main-portfolio-titel">Ресторан Seafood</h3>
                 <p class="main-portfolio-text">Приложение</p></a>
                  </li>
 
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img3.jpg" alt="Наушники" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img3.jpg" alt="Наушники" width="370">
                  <h3 class="main-portfolio-titel">Проект Prime</h3>
                  <p class="main-portfolio-text">Маркетинг</p></a>
                 </li>
 
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img4.jpg" alt="Кубики" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img4.jpg" alt="Кубики" width="370">
                 <h3 class="main-portfolio-titel">Проект Boxes</h3>
                 <p class="main-portfolio-text">Приложение</p></a>
                 </li>
 
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img5.jpg" alt="Монитор" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img5.jpg" alt="Монитор" width="370">
                 <h3 class="main-portfolio-titel">Inspiration has no Borders</h3>
                 <p class="main-portfolio-text">Веб-сайт</p></a>
                 </li>
 
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img6.jpg" alt="Открытая книга" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img6.jpg" alt="Открытая книга" width="370">
                 <h3 class="main-portfolio-titel">Издание Limited Edition</h3>
                 <p>Дизайн</p></a>
                 </li>
 
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img7.jpg" alt="Лейба" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img7.jpg" alt="Лейба" width="370">
                 <h3 class="main-portfolio-titel">Проект LAB</h3>
                 <p class="main-portfolio-text">Маркетинг</p></a>
                 </li>
 
-                <li class="main-portfolio-list-item list"> <a href=""> <img src="images/Portfolio/img8.jpg" alt="Печатает на ноутбуке" width="370">
+                <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img8.jpg" alt="Печатает на ноутбуке" width="370">
                 <h3 class="main-portfolio-titel">Growing Business</h3>
                 <p class="main-portfolio-text">Приложение</p></a>
                 </li>
