--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
 
                 <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img6.jpg" alt="Открытая книга" width="370">
                 <h3 class="main-portfolio-titel">Издание Limited Edition</h3>
-                <p>Дизайн</p></a>
+                <p class="main-portfolio-text">Дизайн</p></a>
                 </li>
 
                 <li class="main-portfolio-list-item list"> <a class="prtfolio-pics" href=""> <img src="images/Portfolio/img7.jpg" alt="Лейба" width="370">
